@@ -92,11 +92,26 @@
     <!-- =========================================================== -->
     <pluginManagement>
       <plugins>
+          <plugin>
+              <groupId>org.codehaus.mojo</groupId>
+              <artifactId>jslint-maven-plugin</artifactId>
+              <version>1.0.1</version>
+          </plugin>
 		<plugin>
 			<groupId>org.bsc.maven</groupId>
 			<artifactId>maven-processor-plugin</artifactId>
           <version>2.2.3</version>
 		</plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-resources-plugin</artifactId>
+          <version>2.6</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-clean-plugin</artifactId>
+          <version>2.5</version>
+        </plugin>
         <plugin>
           <groupId>net.alchim31.maven</groupId>
           <artifactId>yuicompressor-maven-plugin</artifactId>
@@ -171,7 +186,62 @@
     </pluginManagement>
 
     <plugins>
+      <plugin>
+          <groupId>org.codehaus.groovy.maven</groupId>
+          <artifactId>gmaven-plugin</artifactId>
+          <version>1.0</version>
+          <executions>
+              <execution>
+                  <id>Check memory settings</id>
+                  <goals>
+                      <goal>execute</goal>
+                  </goals>
+                  <phase>initialize</phase>
+                  <configuration>
+                      <source><![CDATA[
+                          def converters = [
+                                  "k": 1/10124,
+                                  "m": 1.0,
+                                  "g": 1024.0
+                          ]
+                          def parseInt = {value ->
+                              def intVal = Integer.parseInt(value.substring(0, value.length() - 1));
+                              def unit = value.substring(value.length() - 1).toLowerCase()
+                              def converter = converters[unit]
+                              if (converter == null) {
+                                  throw new AssertionError("unit: $unit is not a recognized unit.  One of k,m,g is required in : $value")
+                              }
+                              return intVal * converter
+                          }
 
+                          final String MAX_PREFIX = "-Xmx"
+                          final String PERMGEN_PREFIX = "-XX:MaxPermSize="
+                          def arguments = java.lang.management.ManagementFactory.getRuntimeMXBean().getInputArguments()
+                          def mx = -1;
+                          def permgen = -1;
+                          arguments.each{param ->
+                              if (param.startsWith(MAX_PREFIX)) {
+                                  mx = parseInt (param.substring(MAX_PREFIX.length()))
+                              } else if (param.startsWith(PERMGEN_PREFIX)) {
+                                  permgen = parseInt (param.substring(PERMGEN_PREFIX.length()))
+                              }
+                          }
+
+                          log.info("\n\tMax Heap Memory: "+mx+" MB\n\tMax PermGen Size: "+permgen+" MB")
+                          if (permgen < 0 || mx < 0) {
+                              def mavenOpts = "MAVEN_OPTS=\"${MAX_PREFIX}512M ${PERMGEN_PREFIX}256M\""
+                              def errorMsg = "\n\nIn order for the build to complete both the $MAX_PREFIX parameter and the "+
+                                      "$PERMGEN_PREFIX must be set.  The e2e tests require this because the start Geonetwork and run " +
+                                      "tests against it which takes a lot of memory.\n\nCmd/Powershell:"+
+                                      "\n\n\t \$Env:${mavenOpts}\n\nBash/SH:\n\n\texport ${mavenOpts}"
+                              log.error(errorMsg);
+                              throw new AssertionError(errorMsg);
+                          }
+                          ]]></source>
+                  </configuration>
+              </execution>
+          </executions>
+      </plugin>
       <!--     Compilation.                                        -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -458,7 +528,12 @@
         <artifactId>batik-ext</artifactId>
         <version>1.6</version>
       </dependency>
-      <dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.5</version>
+        </dependency>
+        <dependency>
         <groupId>log4j</groupId>
         <artifactId>log4j</artifactId>
         <version>1.2.13</version>
@@ -944,19 +1019,6 @@
       <!-- The version number is specified above. -->
       <scope>test</scope>
     </dependency>
-
-    <dependency>
-      <groupId>org.jdom</groupId>
-      <artifactId>jdom</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>jdbm</groupId>
-      <artifactId>jdbm</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-    </dependency>
   </dependencies>
 
   <!-- ================================================================== -->
@@ -1036,7 +1098,9 @@
     <module>healthmonitor</module>
     <module>services</module>
     <module>web-client</module>
+    <module>wro4j</module>
     <module>web</module>
+    <module>e2e-tests</module>
   </modules>
 
   <profiles>
@@ -1090,5 +1154,6 @@
     <maven.build.timestamp.format>yyyy-MM-dd'T'HH'\:'mm'\:'ssZ</maven.build.timestamp.format>
     <build.timestamp>${maven.build.timestamp}</build.timestamp>
     <rootProjectDir>..</rootProjectDir>
+    <wro.version>1.7.1</wro.version>
   </properties>
 </project>
